overflow fix

--- a/src/Styling/Aboutme.module.scss
+++ b/src/Styling/Aboutme.module.scss
@@ -3,7 +3,11 @@
   width: 100%;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 1rem;
+  padding: 1rem;
+  
+  @media only screen and (max-width: 1024px) {
+    padding: 0.3rem;
+}
 
   h1 {
     font-size: 1.5rem;
